# Themis

./: .clang-format  .clang-tidy  .cppcheck  .cppcheck-suppressions  .dockerignore  .gitignore  .gitleaks.toml  ARM_IMPLEMENTATION_SUMMARY.md  AUDIT_SUMMARY_README.md  BENCHMARK_AND_TEST_AUDIT.md  BUILD_ACCELERATION.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPLIANCE.md  CONTRIBUTING.md  CTempmetrics_from_test.txt  DEVELOPMENT_AUDITLOG.md  DOCKER_STATUS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  DOKUMENTATIONS_AUDIT_ZUSAMMENFASSUNG.md  Dockerfile  Dockerfile.old  Dockerfile.qnap  Dockerfile.runtime  EXTERNAL_BLOB_STORAGE_ANALYSIS.md  FEATURES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  MANUAL_CHANGES_REQUIRED.txt  NEXT_IMPLEMENTATION_PRIORITIES.md  PACKAGE-MAINTAINERS.md  PATCH_HTTP_SERVER.txt  PKGBUILD  PRIORITIES.md  README.md  ROADMAP.md  SDK_AUDIT_STATUS.md  (+53 more)
.github/: COPILOT_INSTRUCTIONS.md  instructions
.tools/: extract_gtest_failures.py  openssl_repro  openssl_repro.cpp  openssl_repro2  openssl_repro2.cpp  print_wsl_logs.py  run_wsl_failed_tests.py  show_reruns.py  vault_dev_run.ps1
adapters/: README.md
benchmarks/: README.md  README_HYBRID_BENCH.md  bench_arm_memory.cpp  bench_arm_simd.cpp  bench_blob_zstd.cpp  bench_changefeed_throughput.cpp  bench_compression.cpp  bench_content_versioning.cpp  bench_crud.cpp  bench_encryption.cpp  bench_gnn_embeddings.cpp  bench_gpu_backends.cpp  bench_graph_traversal.cpp  bench_hnsw_prefilter_minimal.cpp  bench_hsm_provider.cpp  bench_hybrid_aql_sugar.cpp  bench_mvcc.cpp  (+16 more)
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_topology.py  test_transaction.py
clients/python/themis/: __init__.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: test_transaction.rs
tools/: CMakeLists.txt  MOCK_MODE.md  README.md  STATUS.md  debug_graph_keys.cpp  publish_wiki.py  sign_pii_engine.py  sign_plugin_manifest.py
tools/Themis.AdminTools.Shared/: README.md  Themis.AdminTools.Shared.csproj
tools/Themis.AdminTools.Shared/ApiClient/: MockThemisApiClient.cs  ThemisApiClient.cs
tools/Themis.AdminTools.Shared/ApiClient/Endpoints/: AuditLogEndpoint.cs  ClassificationEndpoint.cs  KeysEndpoint.cs  PiiEndpoint.cs  ReportsEndpoint.cs  RetentionEndpoint.cs  SagaEndpoint.cs
tools/Themis.AdminTools.Shared/Models/: AuditLogModels.cs  ClassificationModels.cs  Common.cs  KeysModels.cs  PiiModels.cs  ReportsModels.cs  RetentionModels.cs  SAGABatchDetail.cs  SAGABatchInfo.cs  SAGABatchListResponse.cs  SAGAVerificationResult.cs
tools/Themis.AqlQueryBuilder/: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  DESIGN.md  IMPROVEMENTS.md  MainWindow.xaml  MainWindow.xaml.cs  MainWindow.xaml.new  MainWindow.xaml.phase0  PHASE1.5_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_ROADMAP.md  PROJECT_COMPLETE.md  README.md  STATUS.md  SUMMARY.md  Themis.AqlQueryBuilder.csproj  app.manifest
tools/Themis.AqlQueryBuilder/Converters/: ValueConverters.cs
tools/Themis.AqlQueryBuilder/Infrastructure/: Result.cs  ServiceContainer.cs
tools/Themis.AqlQueryBuilder/Models/: AqlQueryModel.cs  ConnectionModels.cs  GeoModels.cs  GraphModels.cs  SchemaModels.cs  VectorModels.cs
tools/Themis.AqlQueryBuilder/Services/: AqlQueryService.cs  HelpService.cs  IHelpService.cs  IServices.cs  QueryHistoryService.cs  SchemaService.cs
tools/Themis.AqlQueryBuilder/ViewModels/: MainViewModel.cs
tools/Themis.AqlQueryBuilder/Views/: EnhancedMainWindow.xaml  EnhancedMainWindow.xaml.cs
tools/Themis.AuditLogViewer/: App.xaml  App.xaml.cs  README.md  Themis.AuditLogViewer.csproj  appsettings.json
tools/Themis.AuditLogViewer/ViewModels/: MainWindowViewModel.cs
tools/Themis.AuditLogViewer/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.ClassificationDashboard/: App.xaml  App.xaml.cs  README.md  Themis.ClassificationDashboard.csproj  app.manifest
tools/Themis.ClassificationDashboard/Models/: DataClassification.cs
tools/Themis.ClassificationDashboard/Properties/PublishProfiles/: SelfContainedWin64.pubxml
tools/Themis.ClassificationDashboard/ViewModels/: MainViewModel.cs
tools/Themis.ClassificationDashboard/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.ComplianceReports/: App.xaml  App.xaml.cs  README.md  app.manifest  appsettings.json
tools/Themis.ComplianceReports/Models/: ComplianceReport.cs
tools/Themis.ComplianceReports/ViewModels/: MainViewModel.cs
tools/Themis.ComplianceReports/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.KeyRotationDashboard/: App.xaml  App.xaml.cs  README.md  Themis.KeyRotationDashboard.csproj  app.manifest
tools/Themis.KeyRotationDashboard/Models/: KeyRotationInfo.cs
tools/Themis.KeyRotationDashboard/ViewModels/: MainViewModel.cs
tools/Themis.KeyRotationDashboard/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.PIIManager/: App.xaml  App.xaml.cs  README.md  Themis.PIIManager.csproj
tools/Themis.PIIManager/Models/: PiiMapping.cs
tools/Themis.PIIManager/ViewModels/: MainViewModel.cs
tools/Themis.PIIManager/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.RetentionManager/: App.xaml  App.xaml.cs  README.md  Themis.RetentionManager.csproj  app.manifest
tools/Themis.RetentionManager/Models/: RetentionPolicy.cs
tools/Themis.RetentionManager/ViewModels/: MainViewModel.cs
tools/Themis.RetentionManager/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/Themis.SAGAVerifier/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  Themis.SAGAVerifier.csproj  appsettings.json
tools/Themis.SAGAVerifier/Converters/: ValueConverters.cs
tools/Themis.SAGAVerifier/ViewModels/: MainViewModel.cs
tools/plugin_signer/: README.md  sign_plugin.py
(+1848 files in other folders)
